--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@ h1{
   font-size:2em;
   position:relative;
   float:left;
-  width:28%;
+  width:25%;
+  margin-left: 3%;
 }
 
 #intro{
@@ -83,13 +84,13 @@ h1{
 
 #ux{
   position:relative;
-  height: 98vh;
+  height: 99vh;
   background-color: #84E9FF;
 }
 
 #last{
   position:relative;
-  height: 98vh;
+  height: 99vh;
   background-color: #84E9FF;
 }
 
@@ -115,7 +116,7 @@ h1{
 }
 
 .starfish{
-  margin-left:-570px;
+  margin-left:-48vw;
   margin-right: 0px;
   position: relative;
   width:auto;
@@ -171,10 +172,11 @@ h2{
 
 .github{
   width:auto;
-  max-width:50%;
+  max-width:25%;
   height:auto;
   float:left;
-  margin-left:26%;
+  margin-right:10%;
+  margin-left:10%;
 }
 
 .coral{
