--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="A blog to discuss technology, feminism, and anything else on my mind." />
 <meta property="og:description" content="A blog to discuss technology, feminism, and anything else on my mind." />
-<link rel="canonical" href="http://localhost:4000/" />
-<meta property="og:url" content="http://localhost:4000/" />
+<link rel="canonical" href="http://natalielane.net/" />
+<meta property="og:url" content="http://natalielane.net/" />
 <meta property="og:site_name" content="Natalie’s Little Theorems" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/","headline":"Natalie’s Little Theorems","name":"Natalie’s Little Theorems","description":"A blog to discuss technology, feminism, and anything else on my mind.","@type":"WebSite","@context":"http://schema.org"}</script>
+{"url":"http://natalielane.net/","headline":"Natalie’s Little Theorems","name":"Natalie’s Little Theorems","description":"A blog to discuss technology, feminism, and anything else on my mind.","@type":"WebSite","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Natalie's Little Theorems" /></head>
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://natalielane.net/feed.xml" title="Natalie's Little Theorems" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Natalie&#39;s Little Theorems</a><nav class="site-nav">
