First post! And About Page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,10 +4,10 @@
 @import "minima";
 
 body{
-  background-color: #FAFAFA;
+  background-color: #f9f8f5;
 }
 
-h3{
+.card-link{
   color: #2199ab;
 }
 
@@ -21,7 +21,8 @@ h3{
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width:40%;
+    width:250px;
+    height:200px;
     padding-top: 10px;
     padding-bottom: 5px;
     padding-left: 10px;
@@ -64,6 +65,37 @@ footer a:hover{
 
 .footer-col-wrapper a{
   color:#fafafa;
+}
+
+
+img {
+    border-radius: 50%;
+    height: 300px;
+    width: 300px;
+    float:right;
+}
+
+.text-block{
+  float: left;
+  width: 50%;
+}
+
+@media only screen and (max-width: 630px) {
+  img {
+      border-radius: 50%;
+      height: 100px;
+      width: 100px;
+      float:right;
+  }
+  .text-block{
+    float: left;
+    width: 70%;
+  }
+}
+
+.about-image-container{
+  // width: 40%;
+  // float: right;
 }
 
 /*8DD871
