--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 <meta name="generator" content="Jekyll v3.8.4" />
 <meta property="og:title" content="Natalie’s Little Theorems" />
 <meta property="og:locale" content="en_US" />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 <meta name="description" content="A blog to discuss technology, feminism, and anything else on my mind." />
 <meta property="og:description" content="A blog to discuss technology, feminism, and anything else on my mind." />
 <link rel="canonical" href="http://localhost:4000/" />
@@ -55,16 +56,23 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li><a class="u-email" href="mailto:dancernl4@gmail.com">dancernl4@gmail.com</a></li></ul>
-      </div>
-
-      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/nlane"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">nlane</span></a></li></ul>
+        <ul class="social-media-list">
+          <li><a href="https://github.com/nlane">
+            <svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use>
+            </svg> <span class="username">nlane</span></a></li></ul>
 </div>
-
-      <div class="footer-col footer-col-3">
-        <p>A blog to discuss technology, feminism, and anything else on my mind.</p>
-      </div>
+    <div class="footer-col footer-col-1">
+    <ul class="social-media-list">
+      <li><a href="https://linkedin.com/in/{{ site.linkedin_username }}">
+      <svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
+      </svg><span class="username">LinkedIn</span>
+    </a></li></ul>
+    </div>
+    <div class="footer-col footer-col-2">
+      <ul class="contact-list">
+        <li><a class="u-email" href="mailto:dancernl4@gmail.com">
+          <i class="fas fa-envelope"></i><span>Email</span></a></li></ul>
+    </div>
     </div>
 
   </div>
