fix email icon color

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
     <div class="footer-col footer-col-2">
       <ul class="contact-list">
         <li><a class="u-email" href="mailto:dancernl4@gmail.com">
-          <i class="fas fa-envelope"></i><span>Email</span></a></li></ul>
+          <i class="fas fa-envelope email-icon"></i><span>Email</span></a></li></ul>
     </div>
     </div>
 
