--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -89,12 +89,10 @@ img {
   width: 50%;
 }
 
-.fas {
+.email-icon {
   padding-right: 5px;
   color: #828282;
 }
-
-
 
 @media only screen and (max-width: 630px) {
   img {
