--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,31 +52,21 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">Natalie&#39;s Little Theorems</h2>
-
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <ul class="social-media-list">
-          <li><a href="https://github.com/nlane">
+          <a href="https://github.com/nlane">
             <svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use>
-            </svg> <span class="username">nlane</span></a></li></ul>
+            </svg></a>
+            <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
+            <svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
+            </svg>
+            </a>
+            <a class="u-email" href="mailto:dancernl4@gmail.com">
+              <i class="fas fa-envelope email-icon"></i></a>
 </div>
-    <div class="footer-col footer-col-1">
-    <ul class="social-media-list">
-      <li><a href="https://linkedin.com/in/{{ site.linkedin_username }}">
-      <svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
-      </svg><span class="username">LinkedIn</span>
-    </a></li></ul>
-    </div>
-    <div class="footer-col footer-col-2">
-      <ul class="contact-list">
-        <li><a class="u-email" href="mailto:dancernl4@gmail.com">
-          <i class="fas fa-envelope email-icon"></i><span>Email</span></a></li></ul>
-    </div>
-    </div>
 
   </div>
-
+</div>
 </footer>
 </body>
 
