--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,7 +66,7 @@ footer a{
 
 .footer-col-wrapper{
   color:#fafafa;
-  text-align: center;
+  text-align: center !important;
 }
 
 footer a:hover{
@@ -82,12 +82,12 @@ footer a:hover{
 }
 
 .footer-col {
-  display: inline-block;
-  width: 100%;
+  display: inline-block !important;
+  width: 100% !important;
 }
 
 .svg-icon {
-  fill: white;
+  fill: white !important;
  }
 
 .svg-icon:hover{
