--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -82,12 +82,13 @@ footer a:hover{
 }
 
 .footer-col {
-  display: inline-block !important;
-  width: 100% !important;
+  display: inline-block;
+  width: 100%;
 }
 
 .svg-icon {
-  fill: white !important;
+  fill: white;
+  color: white;
  }
 
 .svg-icon:hover{
