--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,7 +22,7 @@ body{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width:250px;
-    height:200px;
+    height:150px;
     padding-top: 10px;
     padding-bottom: 5px;
     padding-left: 10px;
@@ -40,6 +40,10 @@ body{
   color: #8DD871;
 }
 
+.post-footer{
+  font-size: 25px;
+  margin-left: 40%;
+}
 /* Add some padding inside the card container */
 // .container {
 //   padding-top: 10px;
