Added Logo and more colors

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,13 @@ body{
   background-color: #f9f8f5;
 }
 
+.logo{
+  width: 30px;
+  height: 30px;
+  float:left;
+  margin-top:13px;
+  margin-left: 10px;
+}
 
 blockquote {
     display: block;
@@ -17,6 +24,7 @@ blockquote {
     border: none;
     text-align: center;
     font-size: 17px;
+    color: #E08BA2;
 }
 
 .card-link{
@@ -42,6 +50,11 @@ blockquote {
   min-height: 55.95px;
   position: relative; }
 
+.card-wrapper{
+  margin-right:20px;
+  width:250px;
+}
+
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -51,14 +64,16 @@ blockquote {
     padding-top: 10px;
     padding-bottom: 5px;
     padding-left: 10px;
-    margin-right:20px;
     margin-left:0px;
     display: inline-block;
+    border-color: #30C2D7;
+    border-width: 2px;
+    border-style: solid;
 }
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
 }
 
 .card:hover h3{
