Center card on mobile view

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -173,6 +173,9 @@ img {
     display: inline-block;
     text-align: left;
   }
+  .card-wrapper{
+    display: inline-block;
+  }
 }
 
 @media only screen and (max-width: 800px) {
