--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,21 +51,23 @@ blockquote {
   position: relative; }
 
 .card-wrapper{
-  margin-right:20px;
-  width:250px;
+  // margin-right:0px;
+  // width:10px;
+  margin: 0 auto;
 }
 
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
-    width:250px;
+    width:210px;
     height:150px;
     padding-top: 10px;
     padding-bottom: 5px;
     padding-left: 10px;
-    margin-left:0px;
-    display: inline-block;
+    margin-right: 20px;
+    // display: inline-block;
+    float:left;
     border-color: #30C2D7;
     border-width: 2px;
     border-style: solid;
@@ -139,11 +141,15 @@ footer a:hover{
   fill: #8DD871;
 }
 
-img {
+.profile-pic {
     border-radius: 50%;
     height: 300px;
     width: 300px;
     float:right;
+}
+
+.imposter-contain{
+  text-align: center;
 }
 
 .text-block{
@@ -162,7 +168,7 @@ img {
 // }
 
 @media only screen and (max-width: 630px) {
-  img {
+  .profile-pic {
       border-radius: 50%;
       height: 100px;
       width: 100px;
