--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,10 +67,10 @@ tw('pageView');
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-          <a href="https://github.com/nlane">
+          <a href="https://github.com/nlane" target="_blank">
             <svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use>
             </svg></a>
-            <a href="https://linkedin.com/in/{{ site.linkedin_username }}">
+            <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank">
             <svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg></a>
             <a class="u-email" href="mailto:dancernl4@gmail.com">
               <i class="fas fa-envelope email-icon"></i></a>
